[package]
name = "timecapsule_rust"
version = "0.1.0"
authors = ["peanuts"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid ={ version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3.0", features = ["mysql","chrono","r2d2"] }
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.10"
serde = "1.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8"
env_logger = "0.7"


# [patch.crates-io]
# diesel = { git = "https://github.com/diesel-rs/diesel.git" }
# diesel_infer_schema = { git = "https://github.com/diesel-rs/diesel.git" }
# diesel_codegen = { git = "https://github.com/diesel-rs/diesel.git" }